--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>조민지 소개장</title>
-  <link rel="stylesheet" href="introduce.css">
+  <link rel="stylesheet" href="introduce_style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
 </head>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <body>
   <nav class="navbar navbar-expand-lg sticky-top navbar-light" style="background-color: rgb(236, 215, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container-fluid">
@@ -43,159 +46,97 @@
       </div>
     </div>
   </nav>
-  <div class="mainbox" id="introduce">
-    <h1 class="maintitle">10기 아기사자 조민지를 소개합니다!</h1>
-    <div class="wrap1" style="display: inline-block; margin-left: 50px; ">
-    <h3 style="font-size: 55px; font-weight: bolder; margin-bottom: 20px;">Main Info.</h3>
-    <div class="maininfo">
-      <p>Name : 조민지</p>
-      <p>Birth : 2001.10.09   /   Age : 22</p>
-      <br>
-      <p>Department : Computer Engineering</p>
-      <p>With : LikeLion 10th</p>
-      <p>Part : Web(Front-End)</p>
-      <br>
-      <p>Git : @mywhzy</p>
-      <p>Insta : @puxh_zy</p>
-    </div>
-    <div class="minjiimg"><div class="liketext" id="movingHeart">❤</div></div>
+  <div class="main-box" id="introduce">
+    <h1 class="main-title">10기 아기사자 조민지를 소개합니다!</h1>
+    <div class="wrap1">
+      <h3 id="h3-1">Main Info.</h3>
+      <div class="main-info">
+        <p>Name : 조민지</p>
+        <p>Birth : 2001.10.09   /   Age : 22</p>
+        <br>
+        <p>Department : Computer Engineering</p>
+        <p>With : LikeLion 10th</p>
+        <p>Part : Web(Front-End)</p>
+        <br>
+        <p>Git : @mywhzy</p>
+        <p>Insta : @puxh_zy</p>
+      </div>
+      <div class="minji-img"><div class="like-text" id="movingHeart">❤</div></div>
       <a href="https://www.instagram.com/puxh_zy/"><img src="image/insta.png" alt="insta-@puxh_zy" class="instaimg" width="30" height="30" style="margin-top: 5px;"></a>
-      <p style="font-size: 30px; margin-top:15px; margin-bottom: 0px; color:rgb(175, 105, 255);">민쥐에게 한 마디..♡</p>
-      <textarea name="To.민쥐" id="sendtxt" cols="40" rows="3" placeholder="좋은 말만 적어주세요~>_<" onkeydown="txtcounter()"></textarea>
+      <p id= "p-toMinji">민쥐에게 한 마디..♡</p>
+      <textarea name="To.민쥐" id="send-txt" cols="40" rows="3" placeholder="좋은 말만 적어주세요~>_<"></textarea>
       <br>
-      <span id="count" style="font-size: 20px; color: rgb(166, 53, 246);">(0/50)</span>
-      <input type="submit" id="sendbtn" value="Send" style="font-size: 20px; background-color: rgb(228, 196, 255); color: rgb(154, 31, 249); border: 1px solid rgb(198, 98, 252); border-radius: 10px; padding-bottom: 0px;">
-      <p style="margin-top: 5px; margin-bottom: 0px;">💌</p>
-      <p id="resulttxt"></p>
+      <span id="count">(0/50)</span>
+      <input type="submit" id="send-btn" value="Send">
+      <p id="p-emoji">💌</p>
+      <p id="result-txt"></p>
     </div>
-    <div class="wrap2" style="display: inline-block; margin-left: 30px;">
-      <h3 style="font-size: 50px; font-weight: bolder; margin-top: 20px; margin-bottom: 20px; padding-top: 5px;">#TMI</h3>
-    <div class="subinfo">
-      <p>Hometown : 충청남도 보령시(대천)</p>
-      <p>Mbti : isfp</p>
-      <p>Hobby : 누운듯이 앉기, 침대와 한 몸 되기</p>
-      <p>MyPuppy : 돼지(시츄,12살,귀요미)</p>
-      <p>Favorite : 딸기, 레서판다</p>
+
+    <div class="wrap2">
+      <h3 id="h3-2">#TMI</h3>
+      <div class="sub-info">
+        <p>Hometown : 충청남도 보령시(대천)</p>
+        <p>Mbti : isfp</p>
+        <p>Hobby : 누운듯이 앉기, 침대와 한 몸 되기</p>
+        <p>MyPuppy : 돼지(시츄,12살,귀요미)</p>
+        <p>Favorite : 딸기, 레서판다</p>
+        <br>
+      </div>
+      <div class="imgs">
+        <img src="image/대천.jpg" class="img-style" alt="대천바다" width="250" height="250">
+        <div class="txt">
+          <p>방학에 대천 오실 분 구해요🌊</p>
+        </div>
+      </div>
+      <div class="imgs">
+        <img src="image/isfp2.jpg" class="img-style" alt="잇프피모먼트1" width="250" height="250">
+        <div class="txt">
+          <p>이것이 잇프피의 일상😉</p>
+        </div>
+      </div>
+      <div class="imgs">
+        <img src="image/isfp3.jpg" class="img-style" alt="잇프피모먼트2" width="250" height="250">
+        <div class="txt">
+          <p>책상이 침대고 침대는 침대면 좋겠다...</p>
+        </div>
+      </div>
+      <br>
+      <br>
+      <div class="two-imgs">
+        <img src="image/우리돼지.jpg" class="img-style" alt="우리돼징" width="250" height="250">
+        <img src="image/돼쥐야오래같이살자아.jpg" class="img-style puppy2" alt="내강아징" width="250" height="250">
+      </div>
+      <div class="imgs">
+        <img src="image/딸기.jpg" class="img-style" alt="딸기" width="250" height="250">
+        <div class="txt">
+          <p>🍓 딸 기 조 아 💗</p>
+        </div>
+      </div>
+      <div class="two-imgs">
+        <img src="image/redPanda/redPanda1.jpg" id="redPanda" class="img-style" alt="레서판다1" width="250" height="250">
+        <img src="image/윙크판다.jpg" alt="레서판다2" class="winkPanda img-style" width="250" height="250">
+      </div>
+      <br>
+      <span id="secrets">Top Secret!</span>
+      <ul id="secretContent">
+        <li style="list-style: none;"><img src="image/저기....jpg" alt="~?" style="width:250px; height: 130px;"></li>
+        <li>딸기 디저트 맛집 알아오기</li>
+        <li>거기로 같이 먹으러 가자하기</li>
+        <li style="list-style: none;">딸기케이크, 딸기라떼, 딸기수플레 환영..♡</li>
+      </ul>
+      <button id="change-btn" style="width:100px; height:30px;">귀요미 더보기</button>
       <br>
     </div>
-    <div class="imgs">
-      <img src="image/대천.jpg" alt="대천바다" width="250" height="250" style="border-radius: 200px; border: 4px outset rgb(205, 178, 249);">
-      <div class="txt">
-      <p>방학에 대천 오실 분 구해요🌊</p>
-     </div>
+
+    <div class="last-ment" id="가보자고" onclick="window.open('https://github.com/mywhzy?tab=repositories')">
+      <p id="p-txt1">"2022년 멋사와 함께 코딩천재 조민지 <p id="p-txt2"> #가보자고"</p></p>
     </div>
-    <div class="imgs">
-      <img src="image/isfp2.jpg" alt="잇프피모먼트1" width="250" height="250" style="border-radius: 200px;border: 4px outset rgb(205, 178, 249);">
-      <div class="txt">
-      <p>이것이 잇프피의 일상😉</p>
-      </div>
-    </div>
-    <div class="imgs">
-      <img src="image/isfp3.jpg" alt="잇프피모먼트2" width="250" height="250" style="border-radius: 200px;border: 4px outset rgb(205, 178, 249);">
-      <div class="txt">
-      <p>책상이 침대고 침대는 침대면 좋겠다...</p>
-      </div>
-    </div>
-    <br>
-    <br>
-    <div class="twoimg">
-      <img src="image/우리돼지.jpg" alt="우리돼징" width="250" height="250" style="border-radius: 200px;border: 4px outset rgb(205, 178, 249);">
-      <img src="image/돼쥐야오래같이살자아.jpg" alt="내강아징" class="puppy2"width="250" height="250" style="border-radius: 200px;border: 4px outset rgb(205, 178, 249);">
-    </div>
-    <div class="imgs">
-      <img src="image/딸기.jpg" alt="딸기" width="250" height="250" style="border-radius: 200px;border: 4px outset rgb(205, 178, 249);">
-      <div class="txt">
-      <p>🍓 딸 기 조 아 💗</p>
-      </div>
-    </div>
-    <div class="twoimg">
-      <img src="image/redPanda/redPanda1.jpg" id="redPanda" alt="레서판다1" width="250" height="250" style="border-radius: 200px;border: 4px outset rgb(205, 178, 249);">
-      <img src="image/윙크판다.jpg" alt="레서판다2" class="winkpanda" width="250" height="250" style="border-radius: 200px;border: 4px outset rgb(205, 178, 249);">
-    </div>
-    <br>
-    <span id="secrets" onclick="openClose()">Top Secret!</span>
-    <ul id="secretContent">
-      <li style="list-style: none;"><img src="image/저기....jpg" alt="~?" style="width:250px;height: 130px;"></li>
-      <li>딸기 디저트 맛집 알아오기</li>
-      <li>거기로 같이 먹으러 가자하기</li>
-      <li style="list-style: none;">딸기케이크, 딸기라떼, 딸기수플레 환영..♡</li>
-    </ul>
-    <button onclick="changeImg()" id="changebtn" style="width:100px; height:30px;">귀요미 더보기</button>
-    <br>
+    <img src="image/가보자고.jpg" alt="#가보자고" id="gabojago">
+    <br><br>
   </div>
-  <div class="lastment" id="가보자고" onclick="window.open('https://github.com/mywhzy?tab=repositories')">
-    <p style="font-style: italic; display: inline-block; margin-bottom: 0px; ">"2022년 멋사와 함께 코딩천재 조민지 <p style="font-style: italic; display: inline-block; color:rgb(101, 98, 249); margin-left:5px; margin-bottom: 0px;"> #가보자고"</p></p>
-  </div>
-  <img src="image/가보자고.jpg" alt="#가보자고" id="gabojago" style="width:50px;height:50px;cursor: pointer;">
-  <br><br>
-</div>
-<script>
-      //글자 수 세기
-      function txtcounter(){
-        var msg = document.getElementById('sendtxt').value;
-        if(msg.length>50){
-        msg = msg.substring(0,50);
-        document.getElementById('sendtxt').value=msg;
-        }
-      document.getElementById('count').innerHTML = '('+msg.length+'/50)';
-      }
 
-      //메시지(방명록) send버튼 클릭 이벤트
-      const send = document.getElementById('sendbtn');
-      send.addEventListener("click",()=>{
-        alert("진짜 전달되는건 아니지만 마음은 전달됐을거예요❤");
-        document.getElementById('resulttxt').innerHTML = document.getElementById('sendtxt').value;
-        document.getElementById('sendtxt').value = "";
-        document.getElementById('count').innerHTML = '(0/50)';
-      });
+<script src="introduce_effect.js"></script>
 
-      //이미지 변경버튼 클릭 이벤트
-      var imgNum =1;
-      function changeImg(){
-        if(imgNum == 6){
-          imgNum =1;
-        }else{
-          imgNum++;
-        }
-        var img = document.getElementById("redPanda");
-        img.setAttribute("src","image/redPanda/redpanda"+imgNum+".jpg");
-      }
-
-      //텍스트 박스 클릭 후 스타일 변경
-      var movetxt = document.getElementById("movingHeart");
-      movetxt.addEventListener("dblclick",()=>{
-        movetxt.style.color = 'red';
-        movetxt.style.fontSize='45px';
-      });
-      movetxt.addEventListener("click",()=>{
-        movetxt.style.color = '#2d2929';
-        movetxt.style.fontSize='40px';
-      });
-
-      //숨김 텍스트 박스(접고 펼치기)
-      function openClose(){
-        if(document.getElementById('secretContent').style.display === 'block'){
-          document.getElementById('secretContent').style.display = 'none';
-          document.getElementById('secrets').textContent='Top Secret!';
-        }else{
-          document.getElementById('secretContent').style.display = 'block';
-          document.getElementById('secrets').textContent = '조민지 꼬시는 법';
-        }
-      }//코드출처:https://joshua-dev-story.blogspot.com/2020/09/javascript-collapse.html
-
-      //가보자고 이미지 줌인/줌아웃처럼
-      var goimg = document.getElementById('gabojago');
-      goimg.addEventListener("mouseover",()=>{
-        goimg.style.width="500px";
-        goimg.style.height="500px";
-        goimg.style.transition = ".5s";
-      });
-      goimg.addEventListener("mouseout",()=>{
-        goimg.style.width="50px";
-        goimg.style.height="50px";
-        goimg.style.transition = ".4s";
-      });
-</script>
 <div id="disqus_thread"></div>
 <script>
     /**
@@ -215,5 +156,7 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 </body>
+
 </html>
